# contract-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fastapiMain.py  ingestionPipeline.py  main.py  main_1.py  pipeline.py  pyproject.toml  rag_evaluation.ipynb  requirements.txt
api/: streaming.py
api/routers/: query.py
evals/: build_golden_dataset.py  golden_dataset_ragas_ready.json  ragas.py
frontend/: gradio_interface.py
generation/: guardrails.py  llm_client.py  output_models.py  question_answering.py
ingestion/: chunking.py  loaders.py  metadata.py  notokkeTest.ipynb  testingNotebook.ipynb  vectorStore.py
notebook/: dataloader.ipynb  test.ipynb  testing.ipynb  testingGPU.ipynb  testingNotebook.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/contracts/: config.json
qdrant_storage/collections/contracts/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/contracts/0/segments/1e909132-4e27-425a-af88-d2f5577e031f/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/contracts/0/segments/5975e3e7-d04d-4719-a1f9-2e068af24d4f/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/contracts/0/segments/b548aaef-5fbd-4021-9298-666ac6c6ee7e/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/contracts/0/segments/e774816a-392c-49d3-9f4b-189cc897b8cc/: mutable_id_tracker.mappings  (+1 more)
retrieval/: filters.py  hybridSearch.py  query_rewriter.py  reranker.py
