[project]
name = "contractassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "cohere>=5.20.7",
    "fastapi>=0.135.1",
    "fastembed>=0.7.4",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pymupdf>=1.27.1",
    "qdrant-client>=1.17.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.3",
    "uvicorn>=0.42.0",
    "langchain-qdrant>=1.1.0",
    "gradio>=6.11.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
